Fix candidate list overflow behaviour
The table content must be put into a div to enable the scrollbar to
appear within the column (rather than for the whole column which is
another option, but would put the legend out of view)

--- a/public/css/table.css
+++ b/public/css/table.css
@@ -1,55 +1,59 @@
-.candid {
-    flex: 3;
-    border-collapse: collapse;
-    margin: 15px 0;
-    font-size: 0.9em;
-    font-family: Fjalla One;
-    min-width: 100%;
+#listContainer {
+  flex: 3;
+  overflow-y: scroll;
+  margin: 15px 0;
+  min-width: 100%;
+}
 
+#candList {
+  border-collapse: collapse;
+  font-size: 0.9em;
+  font-family: Fjalla One;
+  min-width: 100%;
 }
 
 /* style header */
-.candid thead tr {
+#candList thead tr {
     background-color: grey;
     text-align: left;
     display: block;
 }
 
 /* style table cells */
-.candid th, .candid td {
+#candList th, #candList td {
     padding: 5px;
     text-align: left;
     width: 200px;
 }
 
 /* style table rows */
-.candid tbody tr {
+#candList tbody tr {
     border-bottom: 1px solid #dddddd;
 }
 
 /* overflow: auto used so scrollbar only appears when content overflows*/
-.candid tbody {
+#candList tbody {
     min-height: 520px;
     overflow: auto;
     display: block;
 }
 
 /* sorting table*/
-.candid th {
+#candList th {
     cursor: pointer;
 }
-.candid .th-sort-asc::after {
+#candList .th-sort-asc::after {
     content: "\25b4";
 }
-.candid .th-sort-desc::after {
+#candList .th-sort-desc::after {
     content: "\25be";
 }
-.candid .th-sort-asc::after,
-.candid .th-sort-desc::after {
+#candList .th-sort-asc::after,
+#candList .th-sort-desc::after {
     margin-left: 5px;
 }
 /* font style italic for column selected ascending */
-.candid .th-sort-asc,
-.candid .th.sort.desc {
+#candList .th-sort-asc,
+#candList .th.sort.desc {
     font-style: italic;
 }
